WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238139
Accessing WebGL content crashes in macOS Recovery OS
https://bugs.webkit.org/show_bug.cgi?id=238139
Summary
Accessing WebGL content crashes in macOS Recovery OS
Kimmo Kinnunen
Reported
2022-03-21 05:36:08 PDT
Accessing WebGL content crashes in macOS Recovery OS
Attachments
Patch
(2.63 KB, patch)
2022-03-21 06:22 PDT
,
Kimmo Kinnunen
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2022-03-21 05:36:46 PDT
<
rdar://90346629
>
Kimmo Kinnunen
Comment 2
2022-03-21 06:22:30 PDT
Created
attachment 455239
[details]
Patch
EWS
Comment 3
2022-03-21 10:55:10 PDT
Committed
r291566
(
248667@main
): <
https://commits.webkit.org/248667@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455239
[details]
.
Antti Koivisto
Comment 4
2022-03-21 12:54:43 PDT
Comment on
attachment 455239
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=455239&action=review
> Source/WebCore/platform/graphics/cocoa/GraphicsContextGLCocoa.mm:108 > + if (getenv("__OSINSTALL_ENVIRONMENT")) {
Started wondering if this actually works in the web process?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug